--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,15 @@
 name = "working-time-calc"
 version = "0.1.0"
 authors = ["Korbinian Maier <korbinian.maier@tum.de>"]
+license = "Apache-2.0 OR MIT"
+edition = "2018"
 
 [dependencies]
-time = "0.1"
-log = "0.4.1"
+# time = "0.1"
+log = "0.4"
+env_logger = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+
+structopt = "0.3"
+thiserror = "1.0"
