--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2018"
 
 [dependencies]
 # time = "0.1"
+failure = "0.1"
 log = "0.4"
 env_logger = "0.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 structopt = "0.3"
-thiserror = "1.0"
