--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,29 @@
 [package]
-name = "working-time-calc"
-version = "0.1.0"
+name = "stempel"
+version = "0.4.0"
 authors = ["Korbinian Maier <korbinian.maier@tum.de>"]
+license = "MIT"
+edition = "2018"
+readme = "README.md"
+description = "Track the time you spent working"
+categories = ["command-line-utilities"]
+keywords = ["time", "tracking", "management", "clock", "punch"]
+repository = "https://github.com/KuabeM/stempel"
+
+exclude = [".github/*"]
+
+[badges]
+maintenance = { status = "actively-developed" }
 
 [dependencies]
-time = "0.1"
-log = "0.4.1"
+chrono = { version = "0.4", features = ["serde"] }
+failure = "0.1"
+log = "0.4"
+env_logger = "0.5"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+structopt = "0.3"
+common_failures = "0.1"
+
+[profile.release]
+lto = true
