--- a/.github/workflows/build_master.yml
+++ b/.github/workflows/build_master.yml
@@ -21,4 +21,4 @@ jobs:
     - name: Check format
       run: cargo fmt -- --check
     - name: Check clippy
-      run: cargo clippy
+      run: cargo clippy --all-targets --all-features -- -D warnings
