--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -18,4 +18,4 @@ jobs:
     - name: Check format
       run: cargo fmt -- --check
     - name: Check clippy
-      run: cargo clippy
+      run: cargo clippy --all-targets --all-features -- -D warnings
