--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,10 @@ chrono = { version = "0.4", features = ["serde"] }
 colored = "1.9"
 env_logger = "0.7"
 failure = "0.1"
+itertools = "0.10"
 log = "0.4"
 num_enum = "0.4.3"
+num-traits = "0.2"
 regex = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
