--- a/.github/workflows/check_pr.yml
+++ b/.github/workflows/check_pr.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Build
       run: cargo build --verbose --release
     - name: Run tests
@@ -14,8 +14,12 @@ jobs:
   check:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     - name: Check format
       run: cargo fmt -- --check
     - name: Check clippy
       run: cargo clippy --all-targets --all-features -- -D warnings
+    - name: Install cargo-llvm-cov
+      uses: taiki-e/install-action@cargo-llvm-cov
+    - name: Check coverage
+      run: cargo llvm-cov --all-features --workspace
