--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,14 @@ exclude = [".github/*"]
 [badges]
 maintenance = { status = "actively-developed" }
 
-
 [dependencies]
+anyhow = "1"
+thiserror = "1"
+
 chrono = { version = "0.4", features = ["serde"] }
 colored = "1.9"
 env_logger = "0.7"
 itertools = "0.10"
-anyhow = "1"
 log = "0.4"
 num_enum = "0.4.3"
 num-traits = "0.2"
