--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ exclude = [".github/*"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-anyhow = "1"
-thiserror = "1"
+color-eyre = "0.5.7"
+thiserror = "*"
 
 chrono = { version = "0.4", features = ["serde"] }
 colored = "1.9"
