--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,11 +21,12 @@ thiserror = "*"
 
 chrono = { version = "0.4", features = ["serde"] }
 colored = "1.9"
+dirs = "4"
 env_logger = "0.7"
 itertools = "0.10"
 log = "0.4"
-num_enum = "0.4.3"
 num-traits = "0.2"
+num_enum = "0.4.3"
 regex = "1.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
