--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,19 +16,19 @@ exclude = [".github/*"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
-color-eyre = "0.5.7"
+color-eyre = { default-features = false, version = "0.5.7" }
 thiserror = "1"
 
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
 colored = "1.9"
 dirs = "4"
-env_logger = "0.7"
+env_logger = { default-features = false, version = "0.7" }
 itertools = "0.10"
 log = "0.4"
-num-traits = "0.2"
-num_enum = "0.4.3"
-regex = "1.4"
-serde = { version = "1.0", features = ["derive"] }
+num-traits = { default-features = false, version = "0.2" }
+num_enum = { default-features = false, version = "0.4.3" }
+regex = { default-features = false, features = [ "std", "perf" ], version = "1.4" }
+serde = { version = "1.0", features = ["derive"], default-features = false }
 serde_json = "1.0"
 structopt = "0.3"
 
