--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ num-traits = { default-features = false, version = "0.2" }
 num_enum = { default-features = false, version = "0.5" }
 serde = { version = "1.0", features = ["derive"], default-features = false }
 serde_json = "1.0"
-structopt = "0.3"
+clap = { version = "4", features = ["derive"] }
 humantime = "2"
 
 [profile.release]
