--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,21 +16,25 @@ exclude = [".github/*"]
 maintenance = { status = "actively-developed" }
 
 [dependencies]
+chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
+clap = { version = "4", features = ["derive"] }
+clap_complete = "4.1.4"
+
 color-eyre = { default-features = false, version = "0.6" }
 thiserror = "1"
 
-chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
 colored = "2"
 dirs = "4"
 env_logger = { default-features = false, features = ["auto-color", "regex"], version = "0.10" }
-itertools = "0.10"
 log = "0.4"
+
+humantime = "2"
+itertools = "0.10"
 num-traits = { default-features = false, version = "0.2" }
 num_enum = { default-features = false, version = "0.5" }
+
 serde = { version = "1.0", features = ["derive"], default-features = false }
 serde_json = "1.0"
-clap = { version = "4", features = ["derive"] }
-humantime = "2"
 
 [profile.release]
 lto = true
